# webgpu_pyodide_experiments

./: .gitignore  README.md  code.js  code.py  dev.html  dev.py  index.html  init.js  minimal.html  pyodide.html  pyproject.toml  setup.sh  shader.wgsl  webgpu.ipynb  webgpu.py  wgpu.js
.github/workflows/: deploy.yml
client_nicegui/: client.py
nicegui/: gui.py  main.py  webgpu_scene.js  webgpu_scene.py
utils/: eval.wgsl  generate_interpolation_shader.py
webgpu/: colormap.py  compute.wgsl  eval.wgsl  gpu.py  input_handler.py  jupyter.py  main.py  mesh.py  pyodide_code.py  render_data.py  shader.wgsl  uniforms.py  utils.py
